--- a/KDE_package/vignettes/comparison.Rmd
+++ b/KDE_package/vignettes/comparison.Rmd
@@ -2,7 +2,7 @@
 title: "Comparison of Bandwidth Selection Methods"
 author: "Charlotte Boys, Leon Patzig, Carla Sagebiel"
 description: >
-  Comparison of the three bandwidth selection methods.
+  Simulation study to compare our three bandwidth selection methods.
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Comparison of Bandwidth Selection Methods}
@@ -21,7 +21,6 @@ knitr::opts_chunk$set(
 
 ```{r, include=FALSE}
 devtools::load_all(".")
-#devtools::install("KDE_package")
 library(ggplot2)
 ```
 
@@ -29,7 +28,7 @@ library(ggplot2)
 library(KDE)
 ```
 
-We run a simulation study to compare the three bandwidth selection methods.
+We run a simulation study to compare the three bandwidth selection methods. I'll use `MLmetrics::MSE(y_pred, y_true)` on the vectors. I'll start with just the Gaussian kernel, then try it for different functions (ask Carla for her functions). I'll find not just the MSE, but also the computation time either using `system.time()`, `Sys.time()` or `utils::Rprof()`.
 
 First, let us generate our set of finite data points from a mixed Gaussian distribution:
 ```{r}
