--- a/KDE_package/vignettes/BWS.Rmd
+++ b/KDE_package/vignettes/BWS.Rmd
@@ -52,20 +52,22 @@ The user is able to provide their own data, or use `rejection_sample()` to simul
 `rejection_sample()` has the following essential arguments:
 
 * The first argument, `n_obs`, should be an integer giving the number of data points which should be generated.
-* The second argument, `f`, is a probability density function. Users can provide their own function, or make use of one of the provided `pdf` functions (see below).
+* The second argument, `f`, is a probability density function. Users can provide their own function, or make use of one of the provided `pdf` functions:
+  + `pdfs$Cauchy`
+  + `pdfs$Uniform`
+  + `pdfs$Expo`
+  + `pdfs$Mix2Gauss`
 
 Further arguments are optional:
 
 * `helper`: a helper function for the rejection sampling algorithm. Choose from `helpers$normal` (default) or `helpers$uniform`.
 * `n_iter`: a calibration constant (default `10`). The algorithm will take an average of `n_iter` iterations to obtain a sample.
 
-#TODO Options for pdf distributions
-
 For example, we simulate 500 data points from a Cauchy distribution with location parameter `x0 = 0` and scale parameter `gamma = 0.3`:
 
 ```{r}
 pdf <- get_cauchy(0, 0.3)
-data <- rejection_sample(500, pdf)
+data <- rejection_sample(1000, pdf)
 ```
 
 ### Find optimal bandwidth with `bandwidth_selection()`
@@ -98,7 +100,7 @@ ggplot(data.frame(x=c(-3, 3)), aes(x=x)) +
 ```
 
   * `data` is the dataset generated with `rejection_sample()` or otherwise
-  * `maxEval` is the maximum number of function evaluations which `cubature::cubintegrate` will use to find an integral. Particularly for the integral-heavy Goldenschluger-Lepski method, smaller values are recommended to reduce computation time.
+  * `maxEval` is the maximum number of function evaluations which `cubature::cubintegrate` will use to find an integral (default `maxEval = 1e3`). Particularly for the integral-heavy Goldenschluger-Lepski method, smaller values are recommended to reduce computation time. Note, however, that some kernel choices (e.g. `kernels$triangular`) require a value of `1e3` or greater for stable results.
   * `lower` (default `lower = 1e-3`) is a double value which gives the lower bound for the bandwidth search interval i.e. the smallest possible bandwidth
   * Similarly, `upper` (default `upper = 1e0`) is a double value giving an upper bound for the bandwidth search interval
   
@@ -111,7 +113,7 @@ ggplot(data.frame(x=c(-3, 3)), aes(x=x)) +
 #### Goldenschluger-Lepski
   
   * A vector of `bandwidths` to test. Default `bandwidths = NULL`. 
-  * If `bandwidths = NULL`, a uniform sequence of bandwidths is generated within the range between `lower` and `upper`. Parameter `n_bandwidths` gives the number of bandwidths in this sequence.
+  * If `bandwidths = NULL`, a uniform sequence of bandwidths is generated within the range between `lower` and `upper`. Parameter `n_bandwidths` (default `n_bandwidths = 20`) gives the number of bandwidths in this sequence.
   * A calibration constant `c` for the the bias term (default `c = 1`)
   * A calibration constant `v` for the variance term (default `v = 2`)
   
@@ -120,29 +122,39 @@ ggplot(data.frame(x=c(-3, 3)), aes(x=x)) +
 We demonstrate using the Gaussian kernel and PCO bandwidth selection method:
 
 ```{r}
-setup_cluster(use_parallel = FALSE)
 kernel <- kernels$gaussian
-t <- Sys.time()
-Rprof()
-h_opt <- bandwidth_selection('PCO', kernel, data, maxEval = 1e3)
-Rprof(NULL)
-Sys.time()-t
-summaryRprof()
-
+system.time(
+  h_opt <- bandwidth_selection('PCO', kernel, data, maxEval = 1e3)
+  )
 h_opt
 ```
+### Get the estimator for a fixed value of h with `get_kde()`
+
+Once we have our value of h_opt, as well as a chosen kernel and a dataset, we can find our Kernel Density Estimator using the function `get_kde()`. The arguments are as follows:
+
+* `h`, the desired bandwidth
+* `Kernel`, the same kernel used in `bandwidth_selection()`
+* `data`, the same data used in `bandwidth_selection()`
+
+We demonstrate, and plot the KDE alongside our original function:
 ```{r}
 KDE <- get_kde(h_opt, kernel, data)
-
-x_vals <- seq(from = -3, to = 3, length.out = 1e5)
-
-plot(x_vals, pdf(x_vals), col = 1, lwd = 1, type = 'l')#, xlim=c(-4,4), ylim=c(0,0.45))
-lines(x_vals, KDE(x_vals), col=2, lwd=2)
-legend('topleft',
-       c('true function', 'KDE'),
-       lwd = 1:2,
-       col = 1:2)
 ```
 
 
+```{r, echo=FALSE}
+ggplot(data.frame(x=c(-3, 3)), aes(x=x)) + 
+    geom_path(aes(colour="red"), stat="function", fun=KDE)+
+    geom_path(aes(colour="black"), stat="function", fun=pdf) +
+    scale_colour_identity("Function", guide="legend", 
+                          labels = c("KDE", "True pdf"),
+                          breaks = c("red", "black")) 
+```
 
+## Advanced Options
+
+To enable parallelization, call:
+
+```{r eval=FALSE}
+setup_cluster(use_parallel = TRUE)
+```
